--- a/css/menikah.css
+++ b/css/menikah.css
@@ -499,6 +499,18 @@ body.preloader-site {
   margin: 1rem;
 }
 
+.btn-cta-cal {
+  background-color: #996E6D;
+  width:  300px;
+  height: 65px;
+  color: white;
+  font-size: 1.2rem;
+  border: 2px solid #996E6D;
+  border-radius: 10px;
+  align-items: center;
+  margin: 1rem;
+}
+
 .btn-cta {
   background-color: #996E6D;
   width:  210px;
