--- a/css/menikah.css
+++ b/css/menikah.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Lato|Raleway|Rouge+Script");
+@import url("https://fonts.googleapis.com/css?family=Lato|Raleway|Rouge+Script|Arizonia|Courgette|Abril+Fatface|Playfair+Display");
 .has-vertically-aligned-content {
   display: flex;
   flex-direction: column;
@@ -13,6 +13,7 @@ html {
   font-family: 'Raleway', Tahoma, sans-serif;
   width: 100%;
   min-height: 100%;
+  background-color: #272933;
 }
 
 .header-wrapper {
@@ -22,26 +23,32 @@ html {
 .navbar-item {
   line-height: 38px;
   font-weight: 600;
-  text-transform: ;
+  /* text-transform: ; */
   letter-spacing: 1px;
   font-size: 1rem;
-  box-shadow:  ;
+  /* box-shadow:  ; */
 }
 
 .navbar-item.is-active{
-  border-bottom: 2px solid #996E6D;
+  border-bottom: 2px solid #fff;
 }
 
 .a.navbar-item{
-  font-color: #996E6D;
+  font-color: #fff;
 }
 
 
 .hero {
-  background-image: url(https://picsum.photos/id/25/1920/1080);
-  background: linear-gradient(rgba(153, 110, 109, 0.65), rgba(153, 110, 109, 0.65)), rgba(0, 0, 0, 0.55) url("https://picsum.photos/id/381/1920/1080") no-repeat;
+  /* background: linear-gradient(180deg, rgba(43,45,56,1) 50%, rgba(26,27,31,1) 100%), url("../image/BG-01.png"); */
+  background-image: url("../image/BG-01.png");
+  background-position: bottom center;
+  background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
   color: white;
   box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   font-family: 'Raleway', sans-serif;
@@ -50,29 +57,41 @@ html {
 
 
 .hero .title {
-  font-family: 'Rouge Script', sans-serif;
-  font-weight: 700;
-  transform: rotate(-2deg);
-  font-size: 5rem;
+  font-family: 'Courgette', sans-serif;
+  font-weight: 400;
+  /* transform: rotate(-2deg); */
+  font-size: 2.5rem;
   padding-bottom: 5px;
-  color: whitesmoke;
+  color: #ecbb6c;
+  line-height: 1;
 }
 
 .hero .subtitle {
   padding: 35px;
-  color: whitesmoke;
-  font-size: 1.3rem;
+  color: #ecbb6c;
+  font-family: 'Arizonia', sans-serif;
+  font-size: 3rem;
+  font-weight: 400;
+  line-height: 1;
 }
 
 .hero .tempatwaktu {
   padding-top: 35px;
-  font-size: 1.3rem;
+  font-size: 1rem;
+  font-family: 'Abril Fatface', sans-serif;
+  color: #EAE7E1;
   
+}
+
+.hero .mengundang {
+  font-size: 2.188rem;
+  font-family: 'Abril Fatface', sans-serif;
+  color: #E4B578;
 }
 
 .hero .hero-foot {
   height: 50px;
-  background: white;
+  background: #939499;
   box-shadow: 0 2px 15px rgba(0, 0, 0, 0.082);
 }
 
@@ -90,7 +109,7 @@ html {
 .hero .hero-foot .hero-foot--wrapper .hero-menu-desktop {
   line-height: 38px;
   font-weight: 600;
-  text-transform: ;
+  /* text-transform: ; */
   letter-spacing: 1px;
   font-size: 1rem;
 }
@@ -102,17 +121,17 @@ html {
 }
 
 .hero .hero-foot .hero-foot--wrapper .hero-menu-desktop ul li.is-active a {
-  border-bottom: 2px solid #996E6D;
+  border-bottom: 2px solid #ecbb6c;
 }
 
 .hero .hero-foot .hero-foot--wrapper .hero-menu-desktop ul li a {
-  color: #996E6D;
+  color: #000;
 }
 
 .hero .hero-foot .hero-foot--wrapper .hero-menu-desktop ul li a:hover {
-  color: #996E6D;
+  color: #ecbb6c;
   transition: all .2s ease-in-out;
-  border-bottom: 2px solid #c28285;
+  border-bottom: 2px solid #ecbb6c;
 }
 
 
@@ -131,12 +150,12 @@ html {
 }
 
 .main-content .section-dark {
-  background-color: #F4E2E2;
+  background-color: #272933;
   padding: 80px 40px;
 }
 
 .main-content .section-darker {
-  background-color: #EDD2D1;
+  background-color: #272933;
   padding: 80px 40px;
 }
 
@@ -211,6 +230,8 @@ html {
 }
 
 .main-content .section-light.regular-section {
+  background-color: #262830;
+  color: #fff;
   padding-bottom: 80px;
 }
 
@@ -290,7 +311,7 @@ html {
 .main-content .section-title {
   font-family: 'Raleway', sans-serif;
   font-weight: 900;
-  color: #996E6D;
+  color: #fff;
   text-transform: uppercase;
   font-size: 1.5rem;
   letter-spacing: 0px;
@@ -299,7 +320,7 @@ html {
 
 .nama-lengkap {
   font-family: 'Rouge Script', sans-serif;
-  color: #996E6D;
+  color: #ecbb6c;
   font-size: 3.5rem;
   letter-spacing: 0px;
   padding-bottom: 6px;
@@ -309,7 +330,7 @@ html {
 .ampersand {
 font-size: 5rem;
 font-family: 'Rouge Script', sans-serif;
-color: #996E6D;
+color: #ecbb6c;
 line-height: 5rem;
 display: inline-block;
 vertical-align: middle;
@@ -317,24 +338,42 @@ vertical-align: middle;
 
 .bodytext {
   font-size: 18px;
+  color: #fff;
+}
+
+.bodytext-salam {
+  font-family: 'Arizonia', sans-serif;
+  font-size: 30px;
+  color: #fff;
 }
 
 .waktu {
+  color: #fff;
   font-size: 1.4rem;
   font-family: 'Raleway', sans-serif;
 }
 
 .tanggal-angka {
+  color: #ecbb6c;
   font-size: 5rem;
   font-family: 'Raleway', sans-serif;
   font-weight: 900;
   line-height: 1;
 }
 
+/* .tanggal-hari {
+  color: #fff;
+}
+
+.tanggal-bulan {
+  color: #fff;
+} */
+
 .tempat {
+  color: #fff;
   font-size: 1.4rem;
   font-family: 'Raleway', sans-serif;
-  font-size: ;
+  /* font-size: ; */
   margin-bottom: 50px;
 }
 
@@ -558,6 +597,55 @@ body.preloader-site {
   color: white;
 }
 
+.row {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left
+}
+
+.left {
+  width: 40%;
+}
+
+.left-nama, .right-nama {
+  font-family: 'Courgette', sans-serif;
+  font-size: 1.875rem;
+  font-weight: 400;
+  color: #fff;
+}
+
+.putrake, .putrike {
+  font-family: 'Playfair Display', sans-serif;
+  font-size: 1.125rem;
+  font-weight: 300;
+  line-height: 33px;
+  color: #ecbb6c;
+}
+
+.middle {
+  width: 20%;
+}
+
+.right {
+  width: 40%;
+}
+
+
+.row::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.dengan {
+  font-size: 3.125rem;
+  font-family: 'Arizonia', sans-serif;
+  color: #ecbb6c;
+  margin-top: 240px;
+}
+
 .fa-copy {
   margin-right: 5px;
 }
@@ -648,7 +736,7 @@ body.preloader-site {
 }
 
 .section-light {
-  background-image: url(../image/divider-flowers-leaves.png);
+  /* background-image: url(../image/divider-flowers-leaves.png); */
   background-position: bottom -30px center;
   background-repeat: no-repeat;
   background-size: initial;
