--- a/css/menikah.css
+++ b/css/menikah.css
@@ -597,8 +597,16 @@ body.preloader-site {
   color: white;
 }
 
+@media (min-width: 600px) {
+  .row { grid-template-columns: repeat(2, 1fr)}
+}
+
 .row {
   box-sizing: border-box;
+  display: grid;
+  margin: 0 auto;
+  max-width: 1200px;
+  gap: 1rem;
 }
 
 .column {
