--- a/css/menikah.css
+++ b/css/menikah.css
@@ -16,6 +16,52 @@ html {
   background-color: #272933;
 }
 
+.container-satu {
+  margin: 50px auto;
+}
+
+.kolom {
+  padding: 20px;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+}
+
+.kolom.dua {
+  text-align: center;
+  margin: auto;
+}
+
+.nama-mempelai {
+  color: #fff;
+  font-family: 'Courgette', sans-serif;
+  font-size: 30px;
+  line-height: 2;
+}
+
+.dengan {
+  color: #ECBB6C;
+  font-family: 'Arizonia', sans-serif;
+  font-size: 50px;
+}
+
+.nama-ortu {
+  color: #ECBB6C;
+  font-family: 'Playfair Display', sans-serif;
+  font-size: 18px;
+  line-height: 2;
+}
+
+/* Responsive */
+@media ( min-width:600px ) {
+  .container-satu {
+    display: flex;
+    justify-content: space-between;
+  }
+  .kolom {
+    width: 30%;
+  }
+}
+
 .header-wrapper {
   padding-bottom: 30px;
 }
@@ -33,9 +79,9 @@ html {
   border-bottom: 2px solid #fff;
 }
 
-.a.navbar-item{
+/* .a.navbar-item{
   font-color: #fff;
-}
+} */
 
 
 .hero {
@@ -121,7 +167,7 @@ html {
 }
 
 .hero .hero-foot .hero-foot--wrapper .hero-menu-desktop ul li.is-active a {
-  border-bottom: 2px solid #ecbb6c;
+  border-bottom: 2px solid #000;
 }
 
 .hero .hero-foot .hero-foot--wrapper .hero-menu-desktop ul li a {
@@ -337,7 +383,8 @@ vertical-align: middle;
 }
 
 .bodytext {
-  font-size: 18px;
+  font-family: 'Playfair Display', sans-serif;
+  font-size: 22px;
   color: #fff;
 }
 
@@ -595,63 +642,6 @@ body.preloader-site {
   margin: 0;
   vertical-align: middle;
   color: white;
-}
-
-@media (min-width: 600px) {
-  .row { grid-template-columns: repeat(2, 1fr)}
-}
-
-.row {
-  box-sizing: border-box;
-  display: grid;
-  margin: 0 auto;
-  max-width: 1200px;
-  gap: 1rem;
-}
-
-.column {
-  float: left
-}
-
-.left {
-  width: 40%;
-}
-
-.left-nama, .right-nama {
-  font-family: 'Courgette', sans-serif;
-  font-size: 1.875rem;
-  font-weight: 400;
-  color: #fff;
-}
-
-.putrake, .putrike {
-  font-family: 'Playfair Display', sans-serif;
-  font-size: 1.125rem;
-  font-weight: 300;
-  line-height: 33px;
-  color: #ecbb6c;
-}
-
-.middle {
-  width: 20%;
-}
-
-.right {
-  width: 40%;
-}
-
-
-.row::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.dengan {
-  font-size: 3.125rem;
-  font-family: 'Arizonia', sans-serif;
-  color: #ecbb6c;
-  margin-top: 240px;
 }
 
 .fa-copy {
